test/Serialization/Inputs/top-level-code-other.code
fn use(_ x: Int) {}
fn test() {
  use(a!)
  use(b) // expected-error {{cannot find 'b' in scope; did you mean 'a'?}}
}
